--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giới thiệu bản thân</title>
+    <title>Pham Nguyen Anh Thu</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Chào mừng đến với trang cá nhân của tôi</h1>
+        <h1>Heellu, cơm cháo gì chưa mấy người đẹp?</h1>
     </header>
     <section class="about">
         <h2>Giới thiệu</h2>
-        <p>Xin chào! Tôi là [Tên của bạn], một người đam mê [lĩnh vực của bạn]. Tôi thích khám phá, học hỏi và chia sẻ kiến thức với mọi người.</p>
+        <p>Xin chào! Tui là Thư, một người đam mê vọc máy tính. Tôi thích khám phá, học hỏi và kiếm tiền.</p>
+    <img src="f9.jpg">
     </section>
     <section class="contact">
         <h2>Liên hệ</h2>
-        <p>Email: your.email@example.com</p>
+        <p>Email: thupham1032003@gmail.com</p>
         <p>Số điện thoại: 0123-456-789</p>
     </section>
 </body>
